tests/udn_bad_path_test_5/ns_udn.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
---
apiVersion: k8s.ovn.org/v1
kind: UserDefinedNetwork
metadata:
  name: namespace-scoped
spec:
  topology: Layer2
  layer2:
    role: Primary
    subnets:
      - 203.203.0.0/16
    ipam:
      lifecycle: Persistent
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
